@@ -1,8 +1,11 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI=5
+DISTUTILS_OPTIONAL=1
+PYTHON_COMPAT=( python{2_7,3_3,3_4} )
+inherit distutils-r1
 
 DESCRIPTION="Helsinki Finite-State Technology libraries and tools"
 HOMEPAGE="http://hfst.sf.net/"
@@ -10,14 +13,31 @@ SRC_URI="mirror://sourceforge/${PN}/source/${P}.tar.gz"
 LICENSE="GPL-2 GPL-3 Apache-2.0"
 SLOT="0"
 KEYWORDS="~x86 ~amd64"
-IUSE="bindist minimal"
+IUSE="bindist minimal python"
 
+COMMON_DEPEND="python? ( ${PYTHON_DEPS} )"
 DEPEND=">=sys-devel/flex-2.5.35
 >=sys-devel/bison-2.4
-"
-RDEPEND=""
+${COMMON_DEPEND}"
+RDEPEND="${COMMON_DEPEND}"
 
 src_configure() {
 	econf $(use_enable !minimal all-tools ) \
 		$(use_with !bindist foma )
+}
+
+src_compile() {
+	default_src_compile
+	if use python ; then
+		cd "${S}/swig"
+		distutils-r1_src_compile
+	fi
+}
+
+src_install() {
+	default_src_install
+	if use python ; then
+		cd "${S}/swig"
+		distutils-r1_src_install
+	fi
 }
