@@ -1,3 +1,10 @@
+# ChangeLog for sci-misc/hfst
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+  04 Mar 2015; Flammie Pirinen <flammie@gentoo.org> hfst-3.8.1.ebuild:
+  add optional python support
+
 *hfst-3.8.1 (14 Dec 2014)
 
   14 Dec 2014; Flammie Pirinen <flammie@gentoo.org> +hfst-3.8.1.ebuild,
